allow byte-buddy as a dynamically loaded java-agent
See also https://github.com/mockito/mockito/issues/3037#issuecomment-1793424678